--- a/lawn-basics/best-grass-types-for-cold-winters.html
+++ b/lawn-basics/best-grass-types-for-cold-winters.html
@@ -64,6 +64,8 @@
 
 <h2>What cold winters actually damage</h2>
 <p>Cold slows growth until the plant relies on stored energy. Survival depends on crown protection and root health.</p>
+<section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/why-grass-looks-worse-in-fall.html">Why Grass Looks Worse in Fall</a></li><li><a href="/lawn-basics/why-grass-near-trees-struggles.html">Why Grass Near Trees Struggles</a></li></ul></section>
+
 <p>Ice cover, freeze-thaw cycles, and traffic on frozen turf cause more damage than cold alone.</p>
 <p>Grass choice determines whether spring recovery is quick or incomplete.</p>
 
