--- a/lawn-basics/how-grass-actually-grows.html
+++ b/lawn-basics/how-grass-actually-grows.html
@@ -64,6 +64,8 @@
 
 <h2>Grass is not a single stem plant</h2>
 <p>Grass grows from a crown at soil level, not from the leaf tips.</p>
+<section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/why-grass-looks-burned-but-isnt.html">Why Grass Looks Burned but Isn’t</a></li><li><a href="/lawn-basics/how-to-thicken-a-thin-lawn.html">How to Thicken a Thin Lawn</a></li></ul></section>
+
 <p>The visible blades are disposable growth, replaced over and over during the season.</p>
 <p>This structure is why grass survives mowing while many plants cannot.</p>
 
