--- a/lawn-basics/how-often-grass-should-be-mowed.html
+++ b/lawn-basics/how-often-grass-should-be-mowed.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Often Grass Should Be Mowed</title>
-  <meta name="description" content="How mowing frequency depends on growth rate, season, grass type, and stress levels rather than fixed weekly schedules.">
+  <meta name="description" content="Grass mowing frequency depends on growth rate, energy production, and stress levels, not calendar schedules or habit.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-often-grass-should-be-mowed.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="How Often Grass Should Be Mowed">
-  <meta property="og:description" content="How mowing frequency depends on growth rate, season, grass type, and stress levels rather than fixed weekly schedules.">
+  <meta property="og:description" content="Grass mowing frequency depends on growth rate, energy production, and stress levels, not calendar schedules or habit.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-often-grass-should-be-mowed.html">
 
   <!-- Google tag -->
@@ -62,37 +62,56 @@
   <main class="container">
     <h1>How Often Grass Should Be Mowed</h1>
 
-<h2>Mowing follows growth, not the calendar</h2>
-<p>Grass should be cut based on how fast it grows.</p>
-<p>Growth speed changes with season and weather.</p>
+<h2>Why mowing frequency matters biologically</h2>
+<p>Mowing removes photosynthetic tissue. Every cut reduces the leaf area responsible for carbohydrate production.</p>
+<section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/mistakes-that-kill-new-grass.html">Mistakes That Kill New Grass</a></li><li><a href="/lawn-basics/how-wind-affects-grass-growth.html">How Wind Affects Grass Growth</a></li><li><a href="/lawn-basics/why-grass-near-trees-struggles.html">Why Grass Near Trees Struggles</a></li></ul></section>
 
-<h2>The one-third rule</h2>
-<p>Removing too much leaf shocks the plant.</p>
-<p>Frequent light cuts maintain balance.</p>
+<p>Grass survives mowing because growth points are located near the crown, but recovery depends on how much leaf area remains after each cut.</p>
+<p>Mowing frequency determines whether the plant maintains energy balance or enters repeated recovery mode.</p>
 
-<h2>Seasonal differences</h2>
-<p>Spring growth often requires more frequent mowing.</p>
-<p>Summer stress slows growth and reduces frequency.</p>
+<h2>Growth rate, not time, sets mowing needs</h2>
+<p>Grass grows in response to temperature, moisture, and light. These factors change constantly.</p>
+<p>Rapid growth produces excess leaf tissue that can be removed without stress.</p>
+<p>Slow growth means each cut removes a higher percentage of the plant’s energy-producing surface.</p>
 
-<h2>Grass type matters</h2>
-<p>Warm-season and cool-season grasses grow differently.</p>
-<p>Each has its own active growth window.</p>
+<h2>Seasonal growth patterns</h2>
+<p>Spring often produces the fastest growth due to moderate temperatures and adequate moisture.</p>
+<p>Summer heat slows growth in cool-season grasses, increasing mowing stress.</p>
+<p>Warm-season grasses peak later, shifting mowing demand to hotter months.</p>
 
-<h2>Weather effects</h2>
-<p>Rain accelerates growth.</p>
-<p>Drought and heat slow it down.</p>
+<h2>Carbohydrate storage and recovery</h2>
+<p>Grass stores energy in roots and crowns.</p>
+<p>Frequent severe cuts force the plant to draw down these reserves.</p>
+<p>When reserves fall too low, regrowth slows and thinning begins.</p>
 
-<h2>Mower height influence</h2>
-<p>Lower cuts require tighter mowing schedules.</p>
-<p>Higher cuts allow longer intervals.</p>
+<h2>Mowing height interacts with frequency</h2>
+<p>Lower mowing heights reduce remaining leaf area.</p>
+<p>This requires more frequent mowing to avoid excessive removal.</p>
+<p>Higher mowing heights allow longer intervals without stressing the plant.</p>
 
-<h2>Signs mowing is too infrequent</h2>
-<p>Clumping and scalping increase.</p>
-<p>Recovery time lengthens.</p>
+<h2>Weather-driven variability</h2>
+<p>Rain accelerates growth by increasing water availability and nutrient movement.</p>
+<p>Drought and heat suppress growth regardless of mowing habits.</p>
+<p>Fixed schedules ignore these shifts and increase stress risk.</p>
 
-<h2>Consistency beats perfection</h2>
-<p>Regular adjustment matters more than exact timing.</p>
-<p>Healthy grass tolerates minor variation.</p>
+<h2>Consequences of mowing too often</h2>
+<p>Repeated removal of young leaf tissue limits photosynthesis.</p>
+<p>Roots shrink in response to reduced energy supply.</p>
+<p>Stress tolerance declines over time.</p>
+
+<h2>Consequences of mowing too infrequently</h2>
+<p>Overgrown grass requires heavy cuts.</p>
+<p>Large leaf-area loss shocks the plant.</p>
+<p>Scalping becomes more likely, especially on uneven ground.</p>
+
+<h2>Interpreting mowing stress signals</h2>
+<p>Delayed regrowth indicates excessive frequency or severity.</p>
+<p>Clumping and uneven color suggest infrequent mowing.</p>
+<p>These symptoms reflect energy imbalance rather than blade height alone.</p>
+
+<h2>Conclusion</h2>
+<p>Mowing frequency should track growth rate, not habit.</p>
+<p>Healthy lawns adjust mowing timing as conditions change.</p>
   </main>
 
   <footer class="site-footer">
