--- a/lawn-basics/how-short-is-too-short-to-cut-grass.html
+++ b/lawn-basics/how-short-is-too-short-to-cut-grass.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Short Is Too Short to Cut Grass</title>
-  <meta name="description" content="Cutting grass too short explained, including crown exposure, root loss, heat stress, and why low cuts often backfire.">
+  <meta name="description" content="Grass is cut too short when leaf-area loss disrupts energy production, exposes crowns, and reduces root depth beyond recovery limits.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/how-short-is-too-short-to-cut-grass.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="How Short Is Too Short to Cut Grass">
-  <meta property="og:description" content="Cutting grass too short explained, including crown exposure, root loss, heat stress, and why low cuts often backfire.">
+  <meta property="og:description" content="Grass is cut too short when leaf-area loss disrupts energy production, exposes crowns, and reduces root depth beyond recovery limits.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/how-short-is-too-short-to-cut-grass.html">
 
   <!-- Google tag -->
@@ -62,37 +62,56 @@
   <main class="container">
     <h1>How Short Is Too Short to Cut Grass</h1>
 
-<h2>Grass grows from the base</h2>
-<p>Cutting too low removes energy-producing leaf area.</p>
-<p>Recovery depends on remaining tissue.</p>
+<h2>Why cutting height affects survival</h2>
+<p>Grass relies on leaf blades to produce carbohydrates.</p>
+<section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/how-foot-traffic-damages-grass.html">How Foot Traffic Damages Grass</a></li><li><a href="/lawn-basics/how-long-a-lawn-typically-lasts.html">How Long a Lawn Typically Lasts</a></li><li><a href="/lawn-basics/what-overseeding-actually-does.html">What Overseeding Actually Does</a></li></ul></section>
 
-<h2>Crown exposure risk</h2>
-<p>The crown sits near soil level.</p>
-<p>Scalping exposes it to heat and drying.</p>
+<p>Cutting height determines how much photosynthetic tissue remains after mowing.</p>
+<p>Too little remaining leaf area forces the plant into energy deficit.</p>
 
-<h2>Root response to low cuts</h2>
-<p>Roots shrink when leaf area is reduced.</p>
-<p>Shallow roots increase stress sensitivity.</p>
+<h2>The role of the crown</h2>
+<p>The crown contains the growth point and connects leaves to roots.</p>
+<p>It sits near the soil surface and is vulnerable to heat and drying.</p>
+<p>Low cutting heights expose the crown to environmental stress.</p>
 
-<h2>Heat amplification</h2>
-<p>Short grass allows soil to heat faster.</p>
-<p>High soil temperatures slow growth.</p>
+<h2>Leaf-area loss and carbohydrate collapse</h2>
+<p>Severe cuts remove stored energy capacity.</p>
+<p>The plant must redirect carbohydrates from roots to rebuild leaves.</p>
+<p>This weakens root systems and slows recovery.</p>
 
-<h2>Water loss increases</h2>
-<p>Low turf dries faster.</p>
-<p>Irrigation demands rise.</p>
+<h2>Root response to low mowing</h2>
+<p>Roots adjust to available energy.</p>
+<p>Reduced leaf area leads to reduced root mass.</p>
+<p>Shallow roots increase drought and heat sensitivity.</p>
 
-<h2>Grass type differences</h2>
-<p>Some grasses tolerate lower cuts better.</p>
-<p>Others decline quickly when cut short.</p>
+<h2>Soil temperature amplification</h2>
+<p>Short grass allows more sunlight to reach soil.</p>
+<p>Soil temperatures rise, stressing roots.</p>
+<p>High root-zone temperatures reduce water uptake efficiency.</p>
 
-<h2>Repeated scalping damage</h2>
-<p>One low cut causes stress.</p>
-<p>Repeated low cuts cause thinning.</p>
+<h2>Water loss and evaporation</h2>
+<p>Low turf dries faster due to increased airflow.</p>
+<p>Evaporation accelerates water stress.</p>
+<p>Irrigation demand rises as cutting height drops.</p>
 
-<h2>Where the real limit is</h2>
-<p>Too short is when recovery slows.</p>
-<p>Healthy height preserves growth and color.</p>
+<h2>Grass-type tolerance differences</h2>
+<p>Some grasses evolved for low cutting.</p>
+<p>Others rely on taller leaf structure for survival.</p>
+<p>Ignoring species tolerance accelerates decline.</p>
+
+<h2>Cumulative damage from repeated low cuts</h2>
+<p>Single low cuts cause stress.</p>
+<p>Repeated low cuts prevent full recovery.</p>
+<p>Thinning and bare spots develop gradually.</p>
+
+<h2>Recognizing the biological limit</h2>
+<p>Grass is cut too short when regrowth slows noticeably.</p>
+<p>Color loss and thinning indicate energy failure.</p>
+<p>The limit is defined by recovery capacity, not appearance.</p>
+
+<h2>Conclusion</h2>
+<p>Cutting too short undermines root health before visible decline.</p>
+<p>Sustainable height preserves energy balance and resilience.</p>
   </main>
 
   <footer class="site-footer">
