--- a/lawn-basics/warm-season-vs-cool-season-grasses-explained.html
+++ b/lawn-basics/warm-season-vs-cool-season-grasses-explained.html
@@ -64,6 +64,8 @@
 
 <h2>The core difference</h2>
 <p>Warm-season grasses are built for heat. Growth accelerates as temperatures climb and slows hard in cool weather.</p>
+<section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/what-happens-to-grass-roots-when-you-mow.html">What Happens to Grass Roots When You Mow</a></li><li><a href="/lawn-basics/how-to-thicken-a-thin-lawn.html">How to Thicken a Thin Lawn</a></li></ul></section>
+
 <p>Cool-season grasses are built for mild temperatures. Growth surges in spring and fall, then struggles in heat.</p>
 <p>This is not a small detail. It drives the lawn’s green-up timing, stress tolerance, and recovery speed.</p>
 
