--- a/lawn-basics/why-grass-grows-unevenly.html
+++ b/lawn-basics/why-grass-grows-unevenly.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Grass Grows Unevenly</title>
-  <meta name="description" content="Uneven grass growth explained by soil variation, sunlight differences, moisture patterns, and root competition across a lawn.">
+  <meta name="description" content="Grass grows unevenly due to differences in soil structure, moisture, light, root competition, and microclimate conditions across a lawn.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-grows-unevenly.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Why Grass Grows Unevenly">
-  <meta property="og:description" content="Uneven grass growth explained by soil variation, sunlight differences, moisture patterns, and root competition across a lawn.">
+  <meta property="og:description" content="Grass grows unevenly due to differences in soil structure, moisture, light, root competition, and microclimate conditions across a lawn.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-grows-unevenly.html">
 
   <!-- Google tag -->
@@ -62,37 +62,56 @@
   <main class="container">
     <h1>Why Grass Grows Unevenly</h1>
 
-<h2>Soil is never uniform</h2>
-<p>Soil depth and texture vary across yards.</p>
-<p>Roots respond directly to those differences.</p>
+<h2>Uneven growth is the normal baseline</h2>
+<p>Lawns appear uniform from a distance, but the underlying environment is rarely consistent. Soil depth, texture, and compaction vary within short distances.</p>
+<section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/what-happens-if-you-never-mow-grass.html">What Happens If You Never Mow Grass</a></li><li><a href="/lawn-basics/how-wind-affects-grass-growth.html">How Wind Affects Grass Growth</a></li></ul></section>
 
-<h2>Sun exposure differences</h2>
-<p>Sun warms soil unevenly.</p>
-<p>Growth accelerates where light is strongest.</p>
+<p>Grass responds directly to these differences. Growth accelerates where conditions are favorable and slows where they are limiting.</p>
+<p>Uneven growth reflects environmental reality rather than poor maintenance.</p>
 
-<h2>Water distribution problems</h2>
-<p>Irrigation coverage is rarely even.</p>
-<p>Dry and wet spots grow at different speeds.</p>
+<h2>Soil variability and root development</h2>
+<p>Roots grow deeper in loose, well-aerated soil and remain shallow in compacted zones.</p>
+<p>Deeper roots access more water and nutrients, supporting faster blade production.</p>
+<p>Shallow-rooted areas lag even when surface conditions appear similar.</p>
 
-<h2>Compaction patterns</h2>
-<p>Foot traffic compresses soil in paths.</p>
-<p>Compacted zones slow root expansion.</p>
+<h2>Light distribution effects</h2>
+<p>Sun exposure drives photosynthesis directly.</p>
+<p>Areas receiving more light warm earlier and grow faster.</p>
+<p>Partial shade reduces carbohydrate production, slowing regrowth.</p>
 
-<h2>Root competition</h2>
-<p>Trees and shrubs steal moisture and nutrients.</p>
-<p>Grass near roots often thins or slows.</p>
+<h2>Water movement and infiltration</h2>
+<p>Water does not distribute evenly across soil.</p>
+<p>Slopes shed moisture while low spots retain it.</p>
+<p>Both extremes affect root oxygen availability and growth rate.</p>
 
-<h2>Microclimates</h2>
-<p>Slopes, fences, and buildings change airflow.</p>
-<p>Small climate shifts affect growth rate.</p>
+<h2>Root competition from trees and shrubs</h2>
+<p>Woody plants extract water aggressively.</p>
+<p>Grass roots near trees operate under chronic resource limitation.</p>
+<p>This results in thinner, slower-growing turf.</p>
 
-<h2>Mowing influence</h2>
-<p>Uneven cuts exaggerate growth differences.</p>
-<p>Fast-growing areas recover first.</p>
+<h2>Compaction from traffic patterns</h2>
+<p>Foot traffic compresses soil along consistent paths.</p>
+<p>Compaction reduces pore space and limits root respiration.</p>
+<p>Growth slows where oxygen exchange is restricted.</p>
 
-<h2>Why uniform lawns are rare</h2>
-<p>Perfect uniformity requires ideal conditions.</p>
-<p>Most uneven growth reflects site reality.</p>
+<h2>Microclimates within a yard</h2>
+<p>Fences, buildings, and slopes alter airflow and heat retention.</p>
+<p>These microclimates change evaporation rates and soil temperature.</p>
+<p>Grass adapts locally, creating uneven growth rates.</p>
+
+<h2>Mowing amplification effects</h2>
+<p>Fast-growing areas recover quicker after mowing.</p>
+<p>Slow areas appear scalped even at the same cut height.</p>
+<p>Mowing exaggerates existing growth differences.</p>
+
+<h2>Diagnosing uneven growth</h2>
+<p>Persistent patterns usually reflect soil or light issues.</p>
+<p>Recent changes point to irrigation or compaction causes.</p>
+<p>Uniform solutions rarely correct localized constraints.</p>
+
+<h2>Conclusion</h2>
+<p>Uneven growth is a response to uneven conditions.</p>
+<p>Understanding the limiting factor explains the pattern better than chasing uniformity.</p>
   </main>
 
   <footer class="site-footer">
