--- a/lawn-basics/why-grass-turns-brown.html
+++ b/lawn-basics/why-grass-turns-brown.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Grass Turns Brown</title>
-  <meta name="description" content="Reasons grass turns brown, from drought and heat stress to mowing damage, dormancy, and root failure that stop active growth.">
+  <meta name="description" content="Grass turns brown when physiological stress progresses beyond pigment loss into tissue shutdown, dormancy, or death, depending on severity and duration.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-turns-brown.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Why Grass Turns Brown">
-  <meta property="og:description" content="Reasons grass turns brown, from drought and heat stress to mowing damage, dormancy, and root failure that stop active growth.">
+  <meta property="og:description" content="Grass turns brown when physiological stress progresses beyond pigment loss into tissue shutdown, dormancy, or death, depending on severity and duration.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-turns-brown.html">
 
   <!-- Google tag -->
@@ -62,37 +62,56 @@
   <main class="container">
     <h1>Why Grass Turns Brown</h1>
 
-<h2>Brown means growth has stopped</h2>
-<p>Brown blades no longer photosynthesize.</p>
-<p>The cause determines whether recovery is possible.</p>
+<h2>What brown grass biologically represents</h2>
+<p>Brown grass indicates that active photosynthesis has largely stopped. Unlike yellowing, which reflects reduced chlorophyll, browning occurs when leaf tissue dries, collapses, or is intentionally abandoned by the plant.</p>
+<section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/warm-season-vs-cool-season-grasses-explained.html">Warm Season vs Cool Season Grasses Explained</a></li><li><a href="/lawn-basics/how-to-start-over-with-a-dead-lawn.html">How to Start Over With a Dead Lawn</a></li><li><a href="/lawn-basics/can-grass-heal-itself.html">Can Grass Heal Itself</a></li><li><a href="/watering-irrigation/why-wind-increases-water-loss.html">Why Wind Increases Water Loss</a></li></ul></section>
 
-<h2>Drought and heat stress</h2>
-<p>Extended dryness forces grass into survival mode.</p>
-<p>Leaf tissue dries out to protect the crown.</p>
+<p>This does not automatically mean the grass is dead. In many cases, browning is a survival response where the plant sacrifices leaf tissue to protect the crown and roots.</p>
+<p>The critical distinction is whether browning is part of dormancy or the result of structural failure.</p>
 
-<h2>Natural dormancy</h2>
-<p>Some grasses turn brown to conserve energy.</p>
-<p>Dormant grass can recover when conditions improve.</p>
+<h2>Severe water deficit and tissue dehydration</h2>
+<p>Extended drought causes cells to lose water faster than they can replenish it. Once dehydration crosses a threshold, leaf tissue cannot maintain structure and turns brown.</p>
+<p>Grass responds by shutting down leaf metabolism to reduce water loss. The crown remains alive if dehydration is not prolonged.</p>
+<p>This type of browning often appears uniform across exposed areas and coincides with high temperatures and low humidity.</p>
 
-<h2>Root failure</h2>
-<p>Damaged or shallow roots cannot support growth.</p>
-<p>This often follows overwatering or compaction.</p>
+<h2>Dormancy as a protective mechanism</h2>
+<p>Many grasses enter dormancy under extreme heat or cold. Dormant grass turns brown because chlorophyll production stops and leaves senesce.</p>
+<p>The crown remains viable, storing carbohydrates until conditions improve.</p>
+<p>Dormant browning is reversible, but recovery depends on how long dormancy lasts and whether the crown stays hydrated.</p>
 
-<h2>Mowing damage</h2>
-<p>Scalping exposes crowns to heat.</p>
-<p>Recovery slows or stops after repeated stress.</p>
+<h2>Root failure and vascular shutdown</h2>
+<p>When roots are damaged by compaction, overwatering, or disease, water transport to leaves collapses.</p>
+<p>Leaf tissue dries even when soil moisture is present, producing browning that does not reverse quickly.</p>
+<p>This form of browning often spreads in irregular patches.</p>
 
-<h2>Disease and pests</h2>
-<p>Root and crown damage cut off water flow.</p>
-<p>Brown patches often expand outward over time.</p>
+<h2>Mowing-related browning</h2>
+<p>Scalping removes most photosynthetic tissue and exposes crowns to heat and desiccation.</p>
+<p>Repeated low cuts exhaust carbohydrate reserves, preventing leaf regeneration.</p>
+<p>Browning after mowing often follows a sharp, uneven pattern tied to mower height.</p>
 
-<h2>Soil and surface heat</h2>
-<p>Hardscapes raise soil temperature.</p>
-<p>Grass near pavement browns first.</p>
+<h2>Disease and pest involvement</h2>
+<p>Pathogens disrupt water transport or destroy leaf tissue directly.</p>
+<p>Root diseases cause browning through indirect dehydration, while foliar diseases damage tissue outright.</p>
+<p>Progressive spread and defined margins often distinguish biological causes from environmental stress.</p>
 
-<h2>Brown does not always mean dead</h2>
-<p>Check crowns and roots before replacement.</p>
-<p>Many lawns rebound after stress passes.</p>
+<h2>Environmental heat loading</h2>
+<p>Surfaces such as pavement raise soil temperatures beyond tolerance levels.</p>
+<p>Root enzymes fail at high temperatures, cutting off water flow even in moist soil.</p>
+<p>Browning near hardscapes is common under these conditions.</p>
+
+<h2>How browning patterns differ by cause</h2>
+<p>Uniform browning often signals dormancy or widespread drought.</p>
+<p>Patchy or expanding browning suggests root or disease issues.</p>
+<p>Timing relative to weather, mowing, or irrigation changes provides essential context.</p>
+
+<h2>Recovery expectations</h2>
+<p>Dormant grass can recover within weeks once conditions improve.</p>
+<p>Root damage recovery is slower and may require partial regrowth.</p>
+<p>Dead tissue does not recover and must be replaced.</p>
+
+<h2>Conclusion</h2>
+<p>Brown grass is not automatically dead, but it indicates advanced stress.</p>
+<p>Determining whether the crown is alive matters more than leaf color alone.</p>
   </main>
 
   <footer class="site-footer">
