--- a/lawn-basics/why-grass-turns-yellow.html
+++ b/lawn-basics/why-grass-turns-yellow.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Why Grass Turns Yellow</title>
-  <meta name="description" content="Common reasons grass turns yellow, including nutrient issues, watering problems, soil stress, and seasonal slowdowns that reduce chlorophyll.">
+  <meta name="description" content="Grass turns yellow when physiological stress reduces chlorophyll production, often caused by water imbalance, nutrient disruption, soil limits, or growth slowdown.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/why-grass-turns-yellow.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -15,7 +15,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Why Grass Turns Yellow">
-  <meta property="og:description" content="Common reasons grass turns yellow, including nutrient issues, watering problems, soil stress, and seasonal slowdowns that reduce chlorophyll.">
+  <meta property="og:description" content="Grass turns yellow when physiological stress reduces chlorophyll production, often caused by water imbalance, nutrient disruption, soil limits, or growth slowdown.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/why-grass-turns-yellow.html">
 
   <!-- Google tag -->
@@ -62,37 +62,56 @@
   <main class="container">
     <h1>Why Grass Turns Yellow</h1>
 
-<h2>Yellowing is a loss of chlorophyll</h2>
-<p>Grass appears yellow when chlorophyll production drops.</p>
-<p>This usually happens before growth fully slows or stops.</p>
+<h2>What yellow grass actually indicates</h2>
+<p>Yellowing in grass is a visible signal that normal photosynthesis is being disrupted. The green color of turf comes from chlorophyll, a pigment that allows grass to convert light into usable energy. When chlorophyll production slows or existing chlorophyll breaks down faster than it is replaced, blades lose their green color and appear pale or yellow.</p>
+<section class="related-guides"><h2>Related guides</h2><ul class="related-list"><li><a href="/lawn-basics/why-grass-looks-worse-in-fall.html">Why Grass Looks Worse in Fall</a></li><li><a href="/lawn-basics/should-you-bag-or-mulch-grass-clippings.html">Should You Bag or Mulch Grass Clippings</a></li></ul></section>
 
-<h2>Water stress in both directions</h2>
-<p>Underwatering limits nutrient movement and photosynthesis.</p>
-<p>Overwatering reduces oxygen and weakens roots.</p>
+<p>This color change does not identify a single problem. It indicates that the plant is under stress and reallocating resources away from leaf pigmentation toward survival functions. Grass can remain alive and structurally intact while appearing yellow, which is why color change often precedes thinning or dieback.</p>
+<p>Yellow grass should be interpreted as a warning signal rather than a diagnosis. Understanding the underlying biological stress is necessary before any corrective action makes sense.</p>
 
-<h2>Nitrogen and nutrient imbalance</h2>
-<p>Nitrogen deficiency is a common cause of pale color.</p>
-<p>Excess nutrients can also disrupt uptake and cause yellowing.</p>
+<h2>Water stress and root respiration</h2>
+<p>Both insufficient and excessive water interfere with chlorophyll production through different mechanisms. When soil moisture is too low, roots cannot absorb enough water to transport nutrients upward, slowing photosynthesis. Cells lose turgor pressure, and the plant conserves energy by reducing pigment production.</p>
+<p>Excess water causes a different failure. Saturated soil fills air spaces with water, reducing oxygen availability around roots. Grass roots rely on oxygen for respiration, and without it, energy production drops. Nutrient uptake becomes inefficient even when nutrients are present.</p>
+<p>In both cases, chlorophyll synthesis slows because the plant lacks either the raw materials or the energy needed to maintain normal leaf color.</p>
 
-<h2>Soil compaction effects</h2>
-<p>Compacted soil restricts root growth.</p>
-<p>Shallow roots struggle to support healthy leaf color.</p>
+<h2>Nutrient imbalance and chlorophyll synthesis</h2>
+<p>Nitrogen is a core component of chlorophyll molecules. When nitrogen availability drops, grass cannot maintain green pigmentation even if growth continues at a reduced pace. This often produces uniform yellowing across large areas.</p>
+<p>Excess nutrients can also cause yellowing by interfering with uptake balance. High salt concentrations or nutrient antagonism can block root absorption of key elements, producing deficiency symptoms despite adequate soil levels.</p>
+<p>The result is impaired chlorophyll production rather than immediate tissue death, which explains why yellow grass often remains upright and intact.</p>
 
-<h2>Seasonal growth slowdowns</h2>
-<p>Grass yellows naturally when growth conditions are poor.</p>
-<p>This often happens during heat, cold, or drought.</p>
+<h2>Soil compaction and gas exchange limits</h2>
+<p>Compacted soil restricts root depth and reduces pore space needed for oxygen and water movement. Shallow, oxygen-starved roots cannot supply enough resources to support full chlorophyll production.</p>
+<p>Water infiltration slows in compacted areas, increasing both drought stress and waterlogging depending on conditions. These swings compound stress and destabilize pigment production.</p>
+<p>Yellowing in compacted zones often appears persistent because the underlying physical limitation does not resolve on its own.</p>
 
-<h2>Mowing stress</h2>
-<p>Cutting too much leaf at once reduces energy production.</p>
-<p>Color loss often follows heavy or frequent scalping.</p>
+<h2>Seasonal dormancy versus stress response</h2>
+<p>Grass growth is regulated by temperature thresholds. When conditions fall outside the active growth range, chlorophyll production naturally declines. This is common during extreme heat or cold.</p>
+<p>Seasonal yellowing differs from damage because the plant is intentionally slowing metabolism rather than failing. Once temperatures return to favorable ranges, pigment production resumes.</p>
+<p>Stress-induced yellowing occurs when conditions are marginal but not extreme, often leading to prolonged discoloration.</p>
+
+<h2>Mowing stress and carbohydrate loss</h2>
+<p>Leaf tissue is the site of carbohydrate production. Removing too much leaf area at once reduces energy generation, forcing the plant to prioritize regrowth over pigmentation.</p>
+<p>Repeated heavy mowing depletes stored carbohydrates, limiting chlorophyll synthesis and slowing color recovery.</p>
+<p>Yellowing from mowing stress typically appears shortly after cutting and intensifies with repeated scalping.</p>
 
 <h2>Pest and disease pressure</h2>
-<p>Root damage reduces nutrient flow to blades.</p>
-<p>Yellowing can appear before visible thinning.</p>
+<p>Root-feeding pests reduce water and nutrient transport, indirectly limiting chlorophyll production. Foliar diseases disrupt photosynthesis directly by damaging leaf tissue.</p>
+<p>Yellowing often appears before visible thinning or patch formation because pigment loss precedes structural collapse.</p>
+<p>Patterns associated with pests or disease tend to expand outward as damage progresses.</p>
 
-<h2>What yellow color usually means</h2>
-<p>Yellow grass is stressed, not dead.</p>
-<p>Correcting the cause usually restores color over time.</p>
+<h2>How causes can be distinguished</h2>
+<p>Uniform yellowing across large areas often points to nutrient or water balance issues. Patchy or expanding discoloration suggests root damage or localized soil problems.</p>
+<p>Timing relative to weather changes, mowing events, or irrigation adjustments provides context for identifying the dominant stress.</p>
+<p>Color change alone is insufficient; recent environmental changes usually reveal the cause.</p>
+
+<h2>Recovery timelines and limits</h2>
+<p>Water and nutrient-related yellowing often reverses within weeks once conditions stabilize. Compaction-related discoloration persists longer because root systems recover slowly.</p>
+<p>Seasonal yellowing resolves when growth resumes naturally. Pest and disease damage depends on severity and duration.</p>
+<p>Color recovery lags behind physiological recovery, which is why patience is often required.</p>
+
+<h2>Conclusion</h2>
+<p>Yellow grass is usually stressed rather than dead. The plant is conserving energy in response to unfavorable conditions.</p>
+<p>Correcting the underlying cause restores normal chlorophyll production over time. Applying products without understanding the stress mechanism often delays recovery instead of improving it.</p>
   </main>
 
   <footer class="site-footer">
