--- a/soil-fertilizer/index.html
+++ b/soil-fertilizer/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Soil, Fertilizer, &amp; Amendments - GrizzlyGreens</title>
+  <title>Soil, Fertilizer &amp; Amendments - GrizzlyGreens</title>
   <meta name="description" content="Soil basics, nutrients, pH, and amendments that actually move the needle.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/">
 
@@ -14,7 +14,7 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Soil, Fertilizer, &amp; Amendments - GrizzlyGreens">
+  <meta property="og:title" content="Soil, Fertilizer &amp; Amendments - GrizzlyGreens">
   <meta property="og:description" content="Soil basics, nutrients, pH, and amendments that actually move the needle.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/">
 
@@ -61,7 +61,7 @@
 
   <main class="container">
     <section class="hub-hero">
-  <h1>Soil, Fertilizer, &amp; Amendments</h1>
+  <h1>Soil, Fertilizer &amp; Amendments</h1>
   <p class="subtitle">Soil basics, nutrients, pH, and amendments that actually move the needle.</p>
 </section>
 <section class="cards">
