--- a/tools-safety/index.html
+++ b/tools-safety/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Tools, Equipment, &amp; Yard Safety - GrizzlyGreens</title>
+  <title>Tools, Equipment &amp; Yard Safety - GrizzlyGreens</title>
   <meta name="description" content="Tools that matter, maintenance, and safety rules that prevent dumb injuries.">
   <link rel="canonical" href="https://grizzlygreens.net/tools-safety/">
 
@@ -14,7 +14,7 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Tools, Equipment, &amp; Yard Safety - GrizzlyGreens">
+  <meta property="og:title" content="Tools, Equipment &amp; Yard Safety - GrizzlyGreens">
   <meta property="og:description" content="Tools that matter, maintenance, and safety rules that prevent dumb injuries.">
   <meta property="og:url" content="https://grizzlygreens.net/tools-safety/">
 
@@ -61,7 +61,7 @@
 
   <main class="container">
     <section class="hub-hero">
-  <h1>Tools, Equipment, &amp; Yard Safety</h1>
+  <h1>Tools, Equipment &amp; Yard Safety</h1>
   <p class="subtitle">Tools that matter, maintenance, and safety rules that prevent dumb injuries.</p>
 </section>
 <section class="cards">
