--- a/watering-irrigation/index.html
+++ b/watering-irrigation/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Watering, Irrigation, &amp; Drainage - GrizzlyGreens</title>
+  <title>Watering, Irrigation &amp; Drainage - GrizzlyGreens</title>
   <meta name="description" content="Watering schedules, sprinkler setups, drainage issues, and fixes that work.">
   <link rel="canonical" href="https://grizzlygreens.net/watering-irrigation/">
 
@@ -14,7 +14,7 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Watering, Irrigation, &amp; Drainage - GrizzlyGreens">
+  <meta property="og:title" content="Watering, Irrigation &amp; Drainage - GrizzlyGreens">
   <meta property="og:description" content="Watering schedules, sprinkler setups, drainage issues, and fixes that work.">
   <meta property="og:url" content="https://grizzlygreens.net/watering-irrigation/">
 
@@ -61,7 +61,7 @@
 
   <main class="container">
     <section class="hub-hero">
-  <h1>Watering, Irrigation, &amp; Drainage</h1>
+  <h1>Watering, Irrigation &amp; Drainage</h1>
   <p class="subtitle">Watering schedules, sprinkler setups, drainage issues, and fixes that work.</p>
 </section>
 <section class="cards">
