--- a/index.html
+++ b/index.html
@@ -76,18 +76,18 @@
   <p class="card-blurb">Identification first, then control: weeds, insects, and common lawn diseases.</p>
   <a class="read-more" href="/weeds-pests/">Read article</a>
 </article><article class="card card-link">
-  <a class="card-hit" href="/watering-irrigation/" aria-label="Watering, Irrigation, &amp; Drainage"></a>
-  <h2><a class="card-title-link" href="/watering-irrigation/">Watering, Irrigation, &amp; Drainage</a></h2>
+  <a class="card-hit" href="/watering-irrigation/" aria-label="Watering, Irrigation &amp; Drainage"></a>
+  <h2><a class="card-title-link" href="/watering-irrigation/">Watering, Irrigation &amp; Drainage</a></h2>
   <p class="card-blurb">Watering schedules, sprinkler setups, drainage issues, and fixes that work.</p>
   <a class="read-more" href="/watering-irrigation/">Read article</a>
 </article><article class="card card-link">
-  <a class="card-hit" href="/soil-fertilizer/" aria-label="Soil, Fertilizer, &amp; Amendments"></a>
-  <h2><a class="card-title-link" href="/soil-fertilizer/">Soil, Fertilizer, &amp; Amendments</a></h2>
+  <a class="card-hit" href="/soil-fertilizer/" aria-label="Soil, Fertilizer &amp; Amendments"></a>
+  <h2><a class="card-title-link" href="/soil-fertilizer/">Soil, Fertilizer &amp; Amendments</a></h2>
   <p class="card-blurb">Soil basics, nutrients, pH, and amendments that actually move the needle.</p>
   <a class="read-more" href="/soil-fertilizer/">Read article</a>
 </article><article class="card card-link">
-  <a class="card-hit" href="/tools-safety/" aria-label="Tools, Equipment, &amp; Yard Safety"></a>
-  <h2><a class="card-title-link" href="/tools-safety/">Tools, Equipment, &amp; Yard Safety</a></h2>
+  <a class="card-hit" href="/tools-safety/" aria-label="Tools, Equipment &amp; Yard Safety"></a>
+  <h2><a class="card-title-link" href="/tools-safety/">Tools, Equipment &amp; Yard Safety</a></h2>
   <p class="card-blurb">Tools that matter, maintenance, and safety rules that prevent dumb injuries.</p>
   <a class="read-more" href="/tools-safety/">Read article</a>
 </article>
