--- a/lawn-basics/index.html
+++ b/lawn-basics/index.html
@@ -98,27 +98,27 @@
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/why-grass-turns-yellow.html" aria-label="Why Grass Turns Yellow"></a>
   <h2><a class="card-title-link" href="/lawn-basics/why-grass-turns-yellow.html">Why Grass Turns Yellow</a></h2>
-  <p class="card-blurb">Yellow grass is a stress signal. This explains the real causes, how to narrow them down, and why color often changes before growth stops.</p>
+  <p class="card-blurb">Yellow grass signals biological stress, not instant failure. This explains the mechanisms behind color loss and how different stresses interfere with normal growth.</p>
   <a class="read-more" href="/lawn-basics/why-grass-turns-yellow.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/why-grass-turns-brown.html" aria-label="Why Grass Turns Brown"></a>
   <h2><a class="card-title-link" href="/lawn-basics/why-grass-turns-brown.html">Why Grass Turns Brown</a></h2>
-  <p class="card-blurb">Brown grass signals shutdown or death. This breaks down the causes and how to tell temporary dormancy from permanent damage.</p>
+  <p class="card-blurb">Brown grass reflects a deeper level of stress than yellowing. This explains when browning is protective dormancy versus irreversible damage.</p>
   <a class="read-more" href="/lawn-basics/why-grass-turns-brown.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/why-grass-grows-unevenly.html" aria-label="Why Grass Grows Unevenly"></a>
   <h2><a class="card-title-link" href="/lawn-basics/why-grass-grows-unevenly.html">Why Grass Grows Unevenly</a></h2>
-  <p class="card-blurb">Patchy or uneven growth is normal. This explains why some areas thrive while others lag behind.</p>
+  <p class="card-blurb">Uneven growth reflects site variability, not random failure. This explains why lawns develop fast and slow zones over time.</p>
   <a class="read-more" href="/lawn-basics/why-grass-grows-unevenly.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-often-grass-should-be-mowed.html" aria-label="How Often Grass Should Be Mowed"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-often-grass-should-be-mowed.html">How Often Grass Should Be Mowed</a></h2>
-  <p class="card-blurb">Mowing too often or too rarely both cause damage. This explains how to time cuts based on growth, not habit.</p>
+  <p class="card-blurb">Mowing frequency controls plant energy balance. This explains how growth biology, season, and stress determine when grass should be cut.</p>
   <a class="read-more" href="/lawn-basics/how-often-grass-should-be-mowed.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/how-short-is-too-short-to-cut-grass.html" aria-label="How Short Is Too Short to Cut Grass"></a>
   <h2><a class="card-title-link" href="/lawn-basics/how-short-is-too-short-to-cut-grass.html">How Short Is Too Short to Cut Grass</a></h2>
-  <p class="card-blurb">Short grass looks neat but carries risk. This explains when cutting too low causes damage and slow recovery.</p>
+  <p class="card-blurb">Cutting grass too short creates hidden damage. This explains how low cuts affect crowns, roots, and long-term lawn stability.</p>
   <a class="read-more" href="/lawn-basics/how-short-is-too-short-to-cut-grass.html">Read article</a>
 </article><article class="card card-link">
   <a class="card-hit" href="/lawn-basics/what-happens-if-you-cut-grass-too-short.html" aria-label="What Happens If You Cut Grass Too Short"></a>
